@@ -20,6 +20,7 @@
 #include "DecorationsMenuLayout.h"
 #include "DecorationsMenuEntry.h"
 #include "DecorationsMenuDropdown.h"
+#include "InputMonitor.h"
 
 namespace unity
 {
@@ -33,7 +34,6 @@ MenuLayout::MenuLayout(menu::Manager::Ptr const& menu, CompWindow* win)
   , show_now(false)
   , menu_manager_(menu)
   , win_(win)
-  , last_pointer_(-1, -1)
   , dropdown_(std::make_shared<MenuDropdown>(menu_manager_->Indicators(), win))
 {
   visible = false;
@@ -117,14 +117,27 @@ bool MenuLayout::ActivateMenu(std::string const& entry_id)
   if (!activated)
     activated = dropdown_->ActivateChild(target);
 
-  if (activated)
+  return activated;
+}
+
+bool MenuLayout::ActivateMenu(CompPoint const& pos)
+{
+  if (!Geometry().contains(pos))
+    return false;
+
+  for (auto const& item : items_)
   {
-    // Since this generally happens on keyboard activation we need to avoid that
-    // the mouse position would interfere with this
-    last_pointer_.set(pointerX, pointerY);
+    if (!item->visible() || !item->sensitive())
+      continue;
+
+    if (item->Geometry().contains(pos))
+    {
+      std::static_pointer_cast<MenuEntry>(item)->ShowMenu(1);
+      return true;
+    }
   }
 
-  return activated;
+  return false;
 }
 
 void MenuLayout::OnEntryMouseOwnershipChanged(bool owner)
@@ -154,40 +167,21 @@ void MenuLayout::OnEntryActiveChanged(bool actived)
 {
   active = actived;
 
-  if (active && !pointer_tracker_ && items_.size() > 1)
+  if (active && items_.size() > 1)
   {
-    pointer_tracker_.reset(new glib::Timeout(16));
-    pointer_tracker_->Run([this] {
-      Window win;
-      int i, x, y;
-      unsigned int ui;
-
-      XQueryPointer(screen->dpy(), screen->root(), &win, &win, &x, &y, &i, &i, &ui);
-
-      if (last_pointer_.x() != x || last_pointer_.y() != y)
-      {
-        last_pointer_.set(x, y);
-
-        for (auto const& item : items_)
-        {
-          if (!item->visible() || !item->sensitive())
-            continue;
-
-          if (item->Geometry().contains(last_pointer_))
-          {
-            std::static_pointer_cast<MenuEntry>(item)->ShowMenu(1);
-            break;
-          }
-        }
-      }
-
-      return true;
-    });
+    auto const& event_cb = sigc::mem_fun(this, &MenuLayout::OnEntryInputEvent);
+    input::Monitor::Get().RegisterClient(input::Events::POINTER, event_cb);
   }
   else if (!active)
   {
-    pointer_tracker_.reset();
+    input::Monitor::Get().UnregisterClient(sigc::mem_fun(this, &MenuLayout::OnEntryInputEvent));
   }
+}
+
+void MenuLayout::OnEntryInputEvent(XEvent const& e)
+{
+  if (e.type == MotionNotify)
+    ActivateMenu(CompPoint(e.xmotion.x_root, e.xmotion.y_root));
 }
 
 void MenuLayout::ChildrenGeometries(EntryLocationMap& map) const
