@@ -4,6 +4,8 @@ unity (7.4.0+16.04.20160906-0ubuntu2) UNRELEASED; urgency=medium
     converts them to XEvent
   * EdgeBarrierController: use InputMonitor to get the barrier events
     instead of relying on its implementation
+  * DecorationsMenuLayout: use input monitor for menu scrubbing (LP:
+    #1614597)
 
  -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Tue, 04 Jul 2017 18:12:47 +0200
 
